<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateClassesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/from"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nutcapnhat"
            android:textColor="#EAE3E3"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="526dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ten"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/update_classes_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ten"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_update_class"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nutluu"
            android:textSize="20sp"
            app:cornerRadius="40dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>